--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,15 +1,16 @@
 <div class="main-visual">
-  
+  <!--画像スライド-->
+
 </div>
 
 <main>
 
-  <div class="portfolio">
-    <div class="portfolio-box">
-      <div class="portfolio-title">
+  <div class="description">
+    <div class="description-box">
+      <div class="description-title">
         <h1>What? LOCAL INFO TOURISM <i class="far fa-hand-point-down fa-xs"></i></h1>
       </div>
-      <div class="portfolio-text">
+      <div class="description-text">
         <p>観光客と地元民をつなぐ交流系の地域ローカル情報サイトです。</p>
         <p>地元や旅行先のおすすめスポットや美味しかったグルメ情報をアピールしましょう！</p>
         <p>旅行前に現地の情報が欲しい？質問してみましょう。誰かが反応してくれるかも？</p>
@@ -23,7 +24,7 @@
           </p>
         <% end %>
       </div>
-      <div class="portfolio-image-box">
+      <div class="description-image-box">
         <div class="image-box"></div>
         <div class="image-box"></div>
         <div class="image-box"></div>
