--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,6 +1,7 @@
 <% visitor = notification.visitor %>
 <% visited = notification.visited %>
 
+<div class="notification-box">
 <%= link_to user_path(visitor) do %>
   <%= attachment_image_tag visitor, :profile_image, :fill, 40, 40, format: 'jpg', fallback: "no_image.jpg", class: "icon_mini" %>
   <%= visitor.name %>
@@ -30,4 +31,5 @@
 
 <div class=small.text-muted.text-right %>
   <%= time_ago_in_words(notification.created_at).upcase %>前
+</div>
 </div>
