--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -60,35 +60,49 @@
     <div class="box1">
       <table style="border:none;">
         <tr>
-          <td><%= attachment_image_tag post.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg" %></td>
-        </tr>
-        <tr>
           <td>
-            <i class="fas fa-user">
-              <%= post.user.name %>
-            </i>
+            <div class="post-list">
+              <%= attachment_image_tag post.user, :profile_image, :fill, 100, 100, format: 'jpg', fallback: "no_image.jpg" %>
+            </div>
           </td>
         </tr>
         <tr>
           <td>
-            <%= link_to post_path(post) do %>
-              <%= post.title %>
-            <% end %>
-          </td>
-        </tr>
-        <tr>
-          <td><%= post.prefecture %></td>
-        </tr>
-        <tr>
-          <td>
-            <% post.categories.each do |category| %>
-              <%= category.name %>
-            <% end %>
+            <div class="post-list">
+              <i class="fas fa-user">
+                <%= post.user.name %>
+              </i>
+            </div>
           </td>
         </tr>
         <tr>
           <td>
-            <div class="text">
+            <div class="post-list">
+              <%= link_to post_path(post) do %>
+                <%= post.title %>
+              <% end %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="post-list">
+              <%= post.prefecture %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="post-list">
+              <% post.categories.each do |category| %>
+                <%= category.name %>
+              <% end %>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <div class="post-text">
               <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
               <% if post.hashtags.any? %>
                 <% post.hashtags.each do |hashtag| %>
@@ -104,22 +118,18 @@
         </tr>
         <tr>
           <td>
-		        <% if post.post_images.present? %>
-              <% post.post_images.each do |image| %>
-                <%= attachment_image_tag image, :image, :fill, 700, 400 %>
+            <div class="post-image">
+		          <% if post.post_images.present? %>
+                <% post.post_images.each do |image| %>
+                  <%= attachment_image_tag image, :image, :fill, 348, 300 %>
+                <% end %>
               <% end %>
-            <% end %>
-	        </td>
+	          </td>
+          </div>
         </tr>
         <tr>
           <td>
-            <i class="far fa-calendar-alt">
-              <%= l post.created_at %>
-            </i>
-          </td>  
-        </tr>
-        <tr>
-          <td>
+            <span class="favorite-count">
             <% if post.favorited_by?(current_user) %>
               <%= link_to post_favorites_path(post), method: :delete do %>
                 <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
@@ -131,14 +141,25 @@
                 <%= post.favorites.count %>
               <% end %>
             <% end %>
+            </span>
 
+            <span class="comment-count">
             <%= link_to post_path(post.id) do %>
               <i class="fa fa-comment"></i>
               <%= post.post_comments.count %>
             <% end %>
+            </span>
 
+            <span class="look-count">
             <i class="far fa-eye"></i>
             <%= post.impressionist_count %>
+            </span>
+
+            <span class="date">
+              <i class="far fa-calendar-alt">
+                <%= l post.created_at %>
+              </i>
+            </span>
           </td>
         </tr>
       </table>
@@ -147,11 +168,4 @@
     <%= paginate @posts %>
   </div>
 
-  <div class="new-post-form">
-    <%= link_to new_post_path do %>
-      <p class="text-right">
-        <i class="fas fa-plus-circle fa-3x"></i>
-      </p>
-    <% end %>
-  </div>
 </div>
