--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,22 +1,73 @@
-<h2 class="text-center">About</h2>
+<h2 class="text-center">〜About〜</h2>
 
-<div class="about-box">
- <ul class="about-list">
-    <li class="about-list-box">
-        <p class="photo"><img src="https://unsplash.it/300/200?image=875" alt="Photo"></p>
-        <h4 class="txt">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</h4>
-    </li>
-    <li class="about-list-box">
-        <p class="photo"><img src="https://unsplash.it/300/200?image=896" alt="Photo"></p>
-        <h4 class="txt">テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。</h4>
-    </li>
-    <li class="about-list-box">
-        <p class="photo"><img src="https://unsplash.it/300/200?image=872" alt="Photo"></p>
-        <p class="txt">テキストが入ります。テキストが入ります。テキストが入ります。</p>
-    </li>
-    <li class="about-list-box">
-        <p class="photo"><img src="" alt="Photo"></p>
-        <p class="txt">テキストが入ります。テキストが入ります。</p>
-    </li>
-</ul>
+<div class="container about-box">
+  <div class="row about-description">
+    <div class="col-xs-12 about-text-box">
+      <div class="col-xs-8">
+        <h2>STEP1 投稿してみよう</h2>
+        <p></p>
+        <div class="about1">
+          <p class="about-text">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
+          <p class="about-text">bbbb</p>
+          <p class="about-text">cccc</p>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="about-image1"></div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 about-text-box">
+      <div class="col-xs-4">
+        <div class="about-image2"></div>
+      </div>
+      <div class="col-xs-8">
+        <h2>STEP2 探してみよう</h2>
+        <p></p>
+        <div class="about2">
+          <p class="about-text">dddd</p>
+          <p class="about-text">eeee</p>
+          <p class="about-text">ffff</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 about-text-box">
+      <div class="col-xs-8">
+        <h2>STEP3 </h2>
+        <p></p>
+        <div class="about3">
+          <p class="about-text">gggg</p>
+          <p class="about-text">hhhh</p>
+          <p class="about-text">iiii</p>
+        </div>
+      </div>
+      <div class="col-xs-4">
+        <div class="about-image3"></div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 about-text-box">
+      <div class="col-xs-4">
+        <div class="about-image4"></div>
+      </div>
+      <div class="col-xs-8">
+        <h2>STEP4 </h2>
+        <p></p>
+        <div class="about4">
+          <p class="about-text">jjjj</p>
+          <p class="about-text">kkkk</p>
+          <p class="about-text">llll</p>
+        </div>
+      </div>
+    </div>
+      
+    <div class="entrance">
+      <h3>さっそく始めてみよう！！</h3>
+      <div class="entrance-box">
+        <%= link_to '新規登録', new_user_registration_path %> or
+        <%= link_to 'ログイン', new_user_session_path %>
+      </div>
+    </div>
+  </div>
 </div>
