--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -5,15 +5,16 @@
 
 <main>
 
-  <div class="description">
-    <div class="description-box">
-      <div class="description-title">
+  <div class="top-description">
+    <div class="top-description-box">
+      <div class="top-description-title">
         <h1>What? LOCAL INFO TOURISM <i class="far fa-hand-point-down fa-xs"></i></h1>
       </div>
-      <div class="description-text">
+      <div class="top-description-text">
         <p>観光客と地元民をつなぐ交流系の地域ローカル情報サイトです。</p>
-        <p>地元や旅行先のおすすめスポットや美味しかったグルメ情報をアピールしましょう！</p>
-        <p>旅行前に現地の情報が欲しい？質問してみましょう。誰かが反応してくれるかも？</p>
+        <p>地元民だからこそ知っている、あのお店の美味しいグルメ情報やおすすめスポットをアピール！！</p>
+        <p>旅行先での行って良かったスポット。是非おすすめしたいグルメ情報などを共有しましょう！</p>
+        <p>旅行前に現地の情報が欲しい？お土産は何がいい？服装は？質問してみましょう。誰かが反応してくれるかも？</p>
       </div>
       <div class="about-link">
         <%= link_to home_about_path do %>
@@ -24,7 +25,7 @@
           </p>
         <% end %>
       </div>
-      <div class="description-image-box">
+      <div class="top-description-image-box">
         <div class="image-box"></div>
         <div class="image-box"></div>
         <div class="image-box"></div>
