--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-
+<div class="row">
   <div class="col-xs-3"></div>
   <div class="col-xs-6">
 
@@ -54,4 +54,5 @@
 
   </div>
 
+</div>
 </div>
