--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-
+  <div class="row">
   <div class="chat-room">
     <h2 class="text-center">〜チャットルーム〜</h2>
   </div>
@@ -53,6 +53,7 @@
   </div>
 </div>
 
+</div>
 </div>
 
 
