--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,20 +1,43 @@
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="col-xs-4">
 
-  <div class="col-xs-4">
-    <div class="box2">
-      <div class="box-title">Ranking</div>
-        <ul class="list_crown">
-          <% @all_ranks.each.with_index(1) do |rank, i| %>
-            <li>
-              <%= link_to post_path(rank) do %>
-                第<%= i %>位<br>
-                <%= rank.title %>
+        <div class="box2">
+          <div class="box-title">Category</div>
+          <ul class="list-category">
+            <% @categories.each do |category| %>
+              <li>
+                <%= link_to category_path(@post, name: category.name) do %>
+                  <%= category.name %>
+                <% end %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+
+        <div class="box2">
+          <div class="box-title">Ranking</div>
+            <ul class="list_crown">
+              <% @all_ranks.each.with_index(1) do |rank, i| %>
+                <li>
+                  <%= link_to post_path(rank) do %>
+                    第<%= i %>位<br>
+                    <%= rank.title %>
+                  <% end %>
+                </li>
               <% end %>
-            </li>
-          <% end %>
-        </ul>
+            </ul>
+          </div>
+        </div>
       </div>
+
+      <div class="col-xs-8">
+
+        <%= render 'users/index' , users: @users %>
+
+      </div>
+
     </div>
   </div>
-
-  <%= render 'users/index' , users: @users %>
-
+</div>
