--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-
+  <div class="row">
   <% notifications = @notifications.where.not(visitor_id: current_user.id) %>
 
-  <h3 class="text-center">〜通知一覧〜</h3>
+  <h2 class="text-center">〜通知一覧〜</h3>
   
   <div class="col-xs-12">
   <h5>
@@ -19,5 +19,5 @@
   <% end %>
   </div>
   
-
+  </div>
 </div>
