--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -1,7 +1,11 @@
-<div class="col-xs-8">
+
   <% posts.each do |post| %>
     <div class="box1">
-      <table style="border:none; ">
+      <div class="post">
+        <div class="post-head">
+          <h3>POST</h3>
+        </div>
+      <table style="border:none;" >
         <tr>
           <td>
             <div class="post-list">
@@ -106,7 +110,8 @@
             
         </tr>
       </table>
+      </div>
     </div>
   <% end %>
   <%= paginate @posts %>
-</div>
+
