--- a/app/views/relationships/follower.html.erb
+++ b/app/views/relationships/follower.html.erb
@@ -1,6 +1,7 @@
 <h2 class="text-center">フォロー一覧</h2>
 
 <div class="container">
+  <div class="row">
   <div class="col-xs-4">
     <div class="box1">
       <table style="border:none;">
@@ -74,4 +75,5 @@
     <p>ユーザーはいません</p>
   <% end %>
 
+</div>
 </div>
