--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -1,4 +1,5 @@
 <div class="container"> 
+  <div class="row">
 
   <% if @model == 'user' %>
     <h3 class="text-center">Users search for '<%= @content %>' </h3>
@@ -8,4 +9,5 @@
     <%= render 'posts/index' , posts: @posts %>
   <% end %> 
 
+  </div>
 </div>
