--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -1,29 +1,30 @@
-<div class="col-xs-8">
+
   <% users.each do |user| %>
-    <div class="col-xs-8">
+    
       <div class="box1">
-        <table style="border:none;">
-          <tr>
-            <td><%= attachment_image_tag user, :profile_image, :fill, 200, 150, format: 'jpg', fallback: "no_image.jpg" %></td>
-          </tr>
-          <tr>
-            <td>
+        <div class="profile-head">
+          <h3>PROFILE</h3>
+        </div>
+          
+          <div class="profile-box">
+            <div class="box-user">
+              
+            <%= attachment_image_tag user, :profile_image, :fill, 200, 150, format: 'jpg', fallback: "no_image.jpg" %>
+          
+        
               <%= link_to user_path(user) do %>
               <i class="fas fa-user"></i>
               <%= user.name %>
               <% end %>
-            </td>
-          </tr>
-          <tr>
-            <td><%= user.introduction %></td>
-          </tr>
-          <tr>
-            <td><%= user.follower.count %>フォロー</td>
-            <td><%= user.followed.count %>フォロワー</td>
-          </tr>
-        </table>
+            
+            <%= user.introduction %>
+          
+            <%= user.follower.count %>フォロー
+            <%= user.followed.count %>フォロワー
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
+    
   <% end %>
   <%= paginate @users %>
-</div>
