--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="row">
   <div class="col-xs-4"></div>
 
   <div class="col-xs-4">
@@ -41,5 +42,5 @@
     <%= link_to "戻る", user_path(@user) %>
 
   </div>
-
+</div>
 </div>
