--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,44 @@
 <div class="container">
+<div class="row">
   <div class="col-xs-4">
     <div class="box1">
+      <div class="profile">
+        <div class="profile-head">
+          <h3>PROFILE</h3>
+        </div>
       <table style="border:none;">
         <tr>
           <td><%= attachment_image_tag @user, :profile_image, :fill, 320, 250, format: 'jpg', fallback: "no_image.jpg" %></td>
         </tr>
         <tr>
           <td>
-            <i class="fas fa-user">
-              <%= @user.name %>
-            </i>
+            <div class="profile-name">
+              <h4>Name</h4>
+              <i class="fas fa-user">
+                <%= @user.name %>
+              </i>
+            </div>
           </td>
         </tr>
         <tr>
-          <td><%= @user.introduction %></td>
+          <td>
+            <div class="profile-introduction">
+              <h4>Introduction</h4>
+              <%= @user.introduction %>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>
-            <%= link_to follower_path(@user) do %>
-              <%= @user.follower.count %> フォロー
-            <% end %>
-            <%= link_to followed_path(@user) do %>
-              <%= @user.followed.count %> フォロワー
-            <% end %>
+            <div class="follow-list">
+              <%= link_to follower_path(@user) do %>
+                <%= @user.follower.count %> フォロー
+              <% end %>
+              |
+              <%= link_to followed_path(@user) do %>
+                <%= @user.followed.count %> フォロワー
+              <% end %>
+            </div>
           </td>
         </tr>
       </table>
@@ -42,7 +58,7 @@
       <!--チャット-->
       <% unless @user.id == current_user.id %>
         <% if @isRoom == true %>
-          <p class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a>
+          <span class="user-show-room"><a href="/rooms/<%= @roomId %>" class="btn btn-info">チャットへ</a></span>
         <% else %>
           <%= form_for @room do |f| %>
             <%= fields_for @entry do |e| %>
@@ -52,12 +68,17 @@
           <% end %>
         <% end %>      
       <% end %>
+      </div>
     </div>
   </div>
 
   <div class="col-xs-8">
     <% @posts.each do |post| %>
     <div class="box1">
+      <div class="post">
+        <div class="post-head">
+          <h3>POST</h3>
+        </div>
       <table style="border:none;">
         <tr>
           <td>
@@ -163,9 +184,10 @@
           </td>
         </tr>
       </table>
+      </div>
     </div>
     <% end %>
     <%= paginate @posts %>
   </div>
-
+</div>
 </div>
