[Add]back_to_top

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require_tree ../../../app/assets/stylesheets/.
  *= require_self
  */
  @import "bootstrap-sprockets";
@@ -261,7 +262,7 @@ h4 {
 .main-visual {
   width: 100%; /* 横幅いっぱい */
   height: 636px; /* 高さ300px */
-  background-image: url(摩耶山.jpg);
+  /*background-image: url(摩耶山.jpg);*/
   background-size: cover;
   background-position: center;
 }
@@ -430,4 +431,38 @@ main {
 .notification-box {
   border-top: 1px solid olive;
   border-bottom: 1px solid olive;
+}
+
+#page_top{
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background: #003366;
+  opacity: 0.6;
+  border-radius: 50%;
+}
+#page_top a{
+  position: relative;
+  display: block;
+  width: 50px;
+  height: 50px;
+  text-decoration: none;
+}
+#page_top a::before{
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f102';
+  font-size: 25px;
+  color: #fff;
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  top: -5px;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  text-align: center;
 }
