--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,5 +1,12 @@
 <div class="main-visual">
   <!--画像スライド-->
+  <div class="theTarget">
+      <div style="background-image: url(images/カフェ.jpg)"></div>
+      <div style="background-image: url(images/鉄人.jpg)"></div>
+      <div style="background-image: url(images/廃線跡.jpg)"></div>
+      <div style="background-image: url(images/肉寿司.jpg)"></div>
+      <div style="background-image: url(images/富士山.jpg)"></div>
+    </div>
 
 </div>
 
