--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,11 @@
         
       <%= yield %>
       
-      <span id="page_top">
-        <a href="#"></a>
-      </span>
+      <span id="back">
+      <a href="#">
+        <i class="fas fa-angle-double-up fa-2x"></i>
+      </a>
+    </span>
 
       <%= render partial: 'layouts/footer' %>
   
