--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -34,7 +34,7 @@
       <li class="nav-list-item">
         <%= form_tag(search_path, method: :get) do %>
           <%= text_field_tag 'search[content]', "", placeholder: "search" %>
-          <%= select_tag 'search[model]', options_for_select({"ユーザー" => "user", "投稿内容(タグも可)" => "post"}) %>
+          <%= select_tag 'search[model]', options_for_select({"ユーザー" => "user", "投稿内容" => "post"}) %>
           <%= select_tag 'search[method]', options_for_select({"完全一致" => "perfect", "部分一致" => "partial" }) %>
           <%= submit_tag '検索' %>
         <% end %>    
