--- a/app/views/posts/_index.html.erb
+++ b/app/views/posts/_index.html.erb
@@ -5,53 +5,36 @@
         <div class="post-head">
           <h3>POST</h3>
         </div>
-      <table style="border:none;" >
-        <tr>
-          <td>
+
             <div class="post-list">
               <%= attachment_image_tag post.user, :profile_image, :fill, 150, 100, format: 'jpg', fallback: "no_image.jpg" %>
             </div>
-          </td>    
-        <tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
               投稿者：
               <i class="fas fa-user"></i>
               <%= post.user.name %>
             </div>
-          </td>      
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
               タイトル：
               <%= link_to post_path(post) do %>
               <%= post.title %>
               <% end %>
             </div>
-          </td>        
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
               場所：
               <%= post.prefecture %></td>
             </div>
-          </td>    
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-list">
               カテゴリー：
               <% post.categories.each do |category| %>
                 <%= category.name %>
               <% end %>
             </div>
-          </td>        
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-text">
             <!--4.gsub()で正規表現に合致する箇所を空欄にする-->
               <%= simple_format(post.body.gsub!(/[#＃][\w\p{Han}ぁ-ヶｦ-ﾟー]+/, "")) %>
@@ -66,10 +49,7 @@
               <% end %>
             <% end %>
             </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
+          
             <div class="post-image">
 		          <% if post.post_images.present? %>
                 <% post.post_images.each do |image| %>
@@ -77,23 +57,12 @@
                 <% end %>
               <% end %>
             </div>
-	        </td>
-        </tr>
-        <tr>
-          <td>
+        
             <span class="favorite-count">
-              <% if post.favorited_by?(current_user) %>
-                <%= link_to post_favorites_path(post), method: :delete do %>
-                  <i class="fa fa-heart" aria-hidden="true" style="color: red;"></i>
-                  <%= post.favorites.count %>
-                <% end %>
-              <% else %>
-                <%= link_to post_favorites_path(post), method: :post do %>
-                  <i class="fa fa-heart-o" aria-hidden="true"></i>
-                  <%= post.favorites.count %>
-                <% end %>
-              <% end %>
-            </span>
+              <span class="post_<%= post.id %>">
+                <%= render 'favorites/favorite', post: post %>
+              </span>
+	          </span>
            
             <span class="comment-count">
               <%= link_to post_path(post.id) do %>
@@ -106,10 +75,7 @@
               <i class="far fa-calendar-alt"></i>
               <%= l post.created_at %>
             </span>
-          </td>
-            
-        </tr>
-      </table>
+          
       </div>
     </div>
   <% end %>
