--- a/app/views/search/search.html.erb
+++ b/app/views/search/search.html.erb
@@ -3,10 +3,10 @@
 
   <% if @model == 'user' %>
     <h3 class="text-center">Users search for '<%= @content %>' </h3>
-    <%= render 'users/index' , users: @users %>
+    <%= render 'users/index' , users: @records %>
   <% elsif @model == 'post' %>
     <h3 class="text-center">Posts search for '<%= @content %>' </h3>
-    <%= render 'posts/index' , posts: @posts %>
+    <%= render 'posts/index' , posts: @records %>
   <% end %> 
 
   </div>
